# ash-lang

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  README.md  all.txt  ash-project.yaml  ashd.yml  telemetry.jsonl
ash/: Cargo.toml  ash.yml
ash-vscode/: .vscodeignore  README.md  ash-language-0.1.0.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
ash-wasm/: Cargo.toml
ash/docs/: BUILT_WITH_ASH.md  agent-native-gaps.md  architecture.md  ash-advanced.md  ash.md  challenge_me.md  high-level-design.md  human-in-the-loop.md  workflow-engine.md
ash/src/: config.rs  error.rs  executor.rs  interpolation.rs  lexer.rs  lib.rs  log.rs  main.rs  parser.rs  repl.rs  scope.rs  token.rs  tree.rs  util.rs
ash/src/engine/: adapter.rs  api.rs  browser.rs  catalog.rs  config.rs  container.rs  discovery.rs  driver.rs  enhanced-agent-abstraction.md  mod.rs  types.rs
ash/src/eval/: agent.rs  conc.rs  control.rs  expr.rs  mod.rs  scope.rs
ash/src/lang/: ast.rs  lexer.rs  parser.rs  token.rs
ash/src/runtime/: compact.rs  date.rs  executor.rs  interpolation.rs  mod.rs  scope.rs  tree.rs  value.rs
ash/src/telemetry/: client.rs  config.rs  context.rs  event.rs  filter.rs  mod.rs  offset.rs  pipeline.rs  store.rs
ash/testdata/: agent_tests.ash  lang_tests.ash  prompt.md  test_all.ash  test_cli.sh
ash/testdata/integration/: 01-requirements.md  02-design.md  05-deploy.ash  06-release.md
ash/testdata/integration/03-implementation/: 00-init-repo.ash  01-module-a.md  02-module-b.ash  02-module-b.md  03-integrate.md  init.md
ash/testdata/integration/04-verify/: 01-unit-test.md  02-e2e-test.md
ash/testdata/task-tree/: 01-intro.md  03-outro.md  readme.md
ash/testdata/task-tree/02-group/: 01-a.md  02-b.md
ash/testdata/test-project/: ideas.txt
ashd/: Cargo.toml
ashd/src/: channel.rs  config.rs  connection.rs  main.rs  registry.rs  relay.rs  router.rs  spawner.rs  ws.rs
ashd/src/sinks/: kafka.rs  mod.rs  splunk.rs
ashd/src/sources/: folder.rs
(+214 files in other folders)
