[package]
name = "ash"
version = "0.2.11"
edition = "2021"

[dependencies]
regex = "1"
log = { version = "0.4", features = ["std"] }
rustyline = { version = "14", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
threadpool = "1"
tungstenite = "0.24"
url = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[features]
default = ["repl"]
repl = ["rustyline"]
