[package]
name = "ashd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = { version = "7", features = ["macos_kqueue"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = { version = "0.4", features = ["kv"] }
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
rdkafka = { version = "0.36", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
